posts alignment change bug fix

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -56,3 +56,6 @@ from the Screen */
 		opacity: 0;
 	}
 }
+.disabled-link {
+  pointer-events: none;
+}
